--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title></title>
 </head>
+
 <body>
+	<div class="container-fluid text-center pageOne">
+		<h1>Random Quote Generator</h1>
+		<p> Insert Quote Here </p>
+		<button class="btn btn-default" type="Submit">New Quote</button>
+		<div class="quotes">
+			<span class="quote">Hello World</span>
+			<span class="author">- Christian Cebrero</span>
+		</div>
 
 </body>
 </html>
