--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Tajawal" rel="stylesheet">
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -13,7 +14,7 @@
 		<p> Insert Quote Here </p>
 		<button class="btn btn-default" type="Submit">New Quote</button>
 		<div class="quotes">
-			<span class="quote">Hello World</span>
+			<span class="quote" style="font-family: 'Tajawal', sans-serif;">Hello World</span>
 			<span class="author">- Christian Cebrero</span>
 		</div>
 
